--- a/Web_Crawler.ipynb
+++ b/Web_Crawler.ipynb
@@ -6,7 +6,7 @@
       "name": "Web Crawler.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOtRExmjuavhaRKyTJCz4e1",
+      "authorship_tag": "ABX9TyMX5i/zMvJTVgsqJnkZJLmH",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,15 +27,6 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/amaan784/Web-Crawler/blob/main/Web_Crawler.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/googlecolab/colabtools/blob/master/notebooks/colab-github-demo.ipynb)"
-      ],
-      "metadata": {
-        "id": "f-vxsNAPRumA"
-      }
     },
     {
       "cell_type": "code",
@@ -68,7 +59,7 @@
       "metadata": {
         "id": "vTC2GVQZs1YB"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -79,7 +70,7 @@
       "metadata": {
         "id": "Mkwsifjas11C"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -90,7 +81,7 @@
       "metadata": {
         "id": "PfjolKiUs2u2"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -150,9 +141,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Lb_Zp5d8F7cG",
-        "outputId": "d92b3d24-0448-415a-bba2-358d51eca3bc"
+        "outputId": "57af14e9-97b7-49ff-ac95-c15370a445e9"
       },
-      "execution_count": 8,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -180,17 +171,30 @@
         "StanfordLinks = []\n",
         "for i in links:\n",
         "  match = re.search(pattern=\"^https://web.stanford.edu.*\", string=i)\n",
-        "  if x is not None:\n",
+        "  if match is not None:\n",
         "    StanfordLinks.append(match.group())\n",
         "\n",
         "print(StanfordLinks)\n",
         "print(len(StanfordLinks))  "
       ],
       "metadata": {
-        "id": "hVaWuRqVfJs_"
+        "id": "hVaWuRqVfJs_",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "147d2ee5-a13b-49db-9b78-6ad80e6843ef"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['https://web.stanford.edu/~jurafsky/slp3/2.pdf', 'https://web.stanford.edu/~jurafsky/slp3/4.pdf', 'https://web.stanford.edu/~jurafsky/slp3/5.pdf', 'https://web.stanford.edu/~jurafsky/slp3/3.pdf', 'https://web.stanford.edu/~jurafsky/slp3/3.pdf', 'https://web.stanford.edu/~jurafsky/slp3/7.pdf', 'https://web.stanford.edu/~jurafsky/slp3/7.pdf', 'https://web.stanford.edu/~jurafsky/slp3/9.pdf', 'https://web.stanford.edu/~jurafsky/slp3/9.pdf#page=17', 'https://web.stanford.edu/~jurafsky/slp3/11.pdf#page=3', 'https://web.stanford.edu/~jurafsky/slp3/8.pdf', 'https://web.stanford.edu/~jurafsky/slp3/A.pdf', 'https://web.stanford.edu/~jurafsky/slp3/8.pdf', 'https://web.stanford.edu/~jurafsky/slp3/8.pdf#page=6', 'https://web.stanford.edu/~jurafsky/slp3/9.pdf#page=8', 'https://web.stanford.edu/~jurafsky/slp3/11.pdf#page=6', 'https://web.stanford.edu/~jurafsky/slp3/12.pdf', 'https://web.stanford.edu/~jurafsky/slp3/13.pdf', 'https://web.stanford.edu/~jurafsky/slp3/14.pdf', 'https://web.stanford.edu/~jurafsky/slp3/10.pdf']\n",
+            "20\n"
+          ]
+        }
+      ]
     }
   ]
 }
